--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "live-server"
+    "start": "parcel index.html ejercicios/index.html ejercicios/**/.html "
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/ifigueroa065/Curso-Profesional-de-JavaScript#readme",
   "devDependencies": {
-    "live-server": "^1.2.2"
-  }
+    "parcel-bundler": "^1.12.5"
+  },
+  "browserslist": [
+    "last 1 Chrome version"
+  ]
 }
